# ATM-Simulation

./: .gitignore  ATM PYTHON.py  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  weekly-maintenance.yml
docs/architecture/: 01-system-architecture.md  02-database-architecture.md  03-data-workflow.md  04-ml-model-architecture.md  05-cli-workflow.md  06-user-system.md  07-web-dashboard.md  08-roadmap.md  README.md  architecture_text_diagram.txt  generate_diagrams.py
src/: atm_simulator.py  auto_retrain.py  bank_attributes.py  data_analysis.py  data_generator.py  data_ingestion.py  data_visualization.py  demo_manager.py  main.py  report_generator.py  ui_helpers.py  user_analytics.py  user_manager.py  utils.py
src/dashboard/: __init__.py  app.py  routes.py
src/dashboard/templates/: analysis.html  base.html  index.html  ml.html  (+2 more)
src/data/: __init__.py  data_catalog.py  db_manager.py  feature_store.py  generate_diagrams.py  model_registry.py
src/models/: __init__.py  anomaly_detector.py  atm_replenishment.py  bank_clustering.py  bank_recommender.py  base_model.py  cash_demand_forecaster.py  channel_migration.py  churn_predictor.py  credit_scorer.py  investment_recommender.py  loan_default_model.py  lstm_forecaster.py  model_monitor.py  real_time_fraud_detector.py  rfm_segmenter.py  savings_optimizer.py  sentiment_analyzer.py  spending_forecaster.py  transaction_predictor.py  trend_analyzer.py  what_if_simulator.py
tests/: test_analysis.py  test_demo.py  test_ml.py  test_personalized_ml.py  test_phase2_models.py  test_user_manager.py
